   if there's none in the acquisition context. (Deliverance has
   apparently provided these headers for a while, and we already use
   them in the top nav, but we haven't used them in this view.) To use
   this, the proxy server can set headers X-Openplans-Application to
   anything other than 'zope', and X-Openplans-Project to the ID of
   the project. (slinkp, rmarianski)


Bugs Fixed:

 * RSS feeds of wiki page history was prohibitively expensive. Fixed.
   (#2766) (slinkp)

 * The user folder ID migration fix from opencore 0.14 (see below)
   would barf on a few mysterious users. We work around that now,
   although the real fix is to upgrade membrane, which is done in the
   latest Products bundle.  (slinkp)

 * The member area title migration was tweaked to avoid some unnecessary
   data changes, and commit every so often to avoid conflict errors.
   (slinkp)

 * The workflow update migration was refactored to commit every so
   often, to avoid conflict errors. (slinkp)

 * Project summary now correctly shows the blank slate version of the
   BlogSummaryViewlet when there are no blog posts. (slinkp, jhammel)


Refactoring:

 * Optimization: Memoize BaseView.piv and BaseView.miv, to allow those
   views' own memoizations to be useful. (slinkp)


0.15.0 (2008-12-22)
===================


Data Migrations:

 * You will need to use the portal_setup tool to run all the upgrades
   through 0.15. This is done the usual way: In the ZMI, go to
   openplans/portal_setup/manage_upgrades , select the
   opencore.configuration profile, and run all the available upgrades.

   WARNING, it is not known whether you can safely downgrade after
   running these migrations.  We always recommend making backups and
   testing with a copy of live data before you upgrade for real.


Features:

 * Partial translations of the UI into Spanish, French & Portuguese
   (dimo)

 * Member objects now have a _change_member_id() method. This is not